Fix responsiveness on all buttons and remove extra space character at beginning of some lines of code

--- a/client/client.styl
+++ b/client/client.styl
@@ -42,10 +42,12 @@ footer.ui.bottom.fixed
 .ui.accordion .title, .ui.accordion .accordion .title
   cursor initial
 
-#key-display .title .ui.basic.label
-  padding 0em 0.4em
+.ui.top.attached.segment button.validate-button
+  margin-right 13px
 #key-display .title .ui.button i.icon
-  margin 0 0.15em 0 -0.15em
+  margin 0 0.15em 0.15em -0.15em
+#key-display .title .buttons
+  margin 0 8px 0 0
 
 .ui.top.attached.segment
   background-color #f3f3f3
@@ -53,8 +55,13 @@ footer.ui.bottom.fixed
   margin-top 1em
 
 @media screen and (max-width: 420px)
-  span.user-name
+  .micro-hide
     display none!important
+
+@media screen and (max-width: 767px)
+  .mobile-hide
+    display none!important
+
 @media screen and (min-width: 768px)
   padding 40px 0px 60px 0px
 #settingsSaved
